<resources>
    <string name="app_name">ToDo List</string>
    <string name="text">Text</string>
    <string name="text1">1.</string>
    <string name="enter">Enter Text</string>
    <string name="set_time">Set Time</string>
    <string name="select_time">Select Time</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
</resources>